--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.0",
+        "psr/simple-cache": "^2.0",
         "spatie/laravel-permission": "^6.21",
         "spatie/laravel-query-builder": "^6.3",
         "yoeunes/toastr": "^2.3"
